# education

./: CMakeLists.txt  List.cpp  ListInputTailLinear.cpp  Node.cpp  Tree.cpp  bidirectionalList.cpp  vektor.cpp
